crates/caffeine-ls/tests/snapshots/lsp_snapshots__release_api_diagnostic.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: diagnostics
---
{
  "resultId": "b46a39aee72134f9",
  "items": [
    {
      "range": {
        "start": {
          "line": 5,
          "character": 35
        },
        "end": {
          "line": 5,
          "character": 57
        }
      },
      "severity": 1,
      "code": "api-not-supported-in-release",
      "source": "caffeine-ls",
      "message": "method 'of(java.lang.String)' in 'java.util.List' is not supported in release 8 (added in release 9)"
    },
    {
      "range": {
        "start": {
          "line": 4,
          "character": 46
        },
        "end": {
          "line": 4,
          "character": 54
        }
      },
      "severity": 1,
      "code": "api-not-supported-in-release",
      "source": "caffeine-ls",
      "message": "class 'java.util.SequencedCollection' is not supported in release 8 (added in release 21)"
    }
  ],
  "kind": "full"
}
