crates/caffeine-ls/tests/snapshots/lsp_snapshots__sanity_checks.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: "(diag_empty, diag_garbage)"
---
[
  {
    "resultId": "1",
    "items": [],
    "kind": "full"
  },
  {
    "resultId": "1",
    "items": [
      {
        "range": {
          "start": {
            "line": 0,
            "character": 4
          },
          "end": {
            "line": 0,
            "character": 5
          }
        },
        "severity": 1,
        "code": "compiler.err.illegal.char",
        "source": "caffeine-ls",
        "message": "Illegal character: '#'"
      },
      {
        "range": {
          "start": {
            "line": 0,
            "character": 4
          },
          "end": {
            "line": 0,
            "character": 5
          }
        },
        "severity": 1,
        "code": "expected-construct",
        "source": "caffeine-ls",
        "message": "Expected a declaration (e.g., class, variable, or method) here"
      }
    ],
    "kind": "full"
  }
]
