crates/caffeine-ls/tests/snapshots/lsp_snapshots__syntax_diagnostics_before_workspace_load.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: diagnostics
---
{
  "items": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 4
        },
        "end": {
          "line": 3,
          "character": 5
        }
      },
      "severity": 1,
      "source": "caffeine-ls",
      "message": "Expected ';', but found '}'."
    }
  ],
  "kind": "full"
}
