crates/caffeine-ls/tests/snapshots/lsp_snapshots__type_diagnostics.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: diagnostics
---
{
  "resultId": "1",
  "items": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 19
        },
        "end": {
          "line": 3,
          "character": 20
        }
      },
      "severity": 1,
      "code": "compiler.err.not.stmt",
      "source": "caffeine-ls",
      "message": "not a statement"
    },
    {
      "range": {
        "start": {
          "line": 2,
          "character": 12
        },
        "end": {
          "line": 2,
          "character": 28
        }
      },
      "severity": 1,
      "code": "compiler.err.cant.resolve.location",
      "source": "caffeine-ls",
      "message": "cannot find symbol\n  symbol:   method noSuchMethod()"
    },
    {
      "range": {
        "start": {
          "line": 3,
          "character": 12
        },
        "end": {
          "line": 3,
          "character": 19
        }
      },
      "severity": 1,
      "code": "compiler.err.cant.resolve.location",
      "source": "caffeine-ls",
      "message": "cannot find symbol\n  symbol:   variable unknown"
    }
  ],
  "kind": "full"
}
