crates/caffeine-ls/tests/snapshots/lsp_snapshots__unclosed_block.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
assertion_line: 244
expression: diagnostics
---
{
  "items": [
    {
      "range": {
        "start": {
          "line": 1,
          "character": 32
        },
        "end": {
          "line": 1,
          "character": 33
        }
      },
      "severity": 1,
      "code": "expected-construct",
      "source": "caffeine-ls",
      "message": "Expected a type here."
    },
    {
      "range": {
        "start": {
          "line": 3,
          "character": 4
        },
        "end": {
          "line": 3,
          "character": 4
        }
      },
      "severity": 1,
      "code": "expected-token",
      "source": "caffeine-ls",
      "message": "Expected '}', but found 'EOF'."
    },
    {
      "range": {
        "start": {
          "line": 3,
          "character": 4
        },
        "end": {
          "line": 3,
          "character": 4
        }
      },
      "severity": 1,
      "code": "expected-token",
      "source": "caffeine-ls",
      "message": "Expected '}', but found 'EOF'."
    }
  ],
  "kind": "full"
}
