crates/caffeine-ls/tests/snapshots/lsp_snapshots__workspace_symbols.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: normalized
---
[
  {
    "location": {
      "uri": "file://<WORKSPACE_ROOT>/src/com/example/Foo.java"
    },
    "data": {
      "file_id": 0,
      "item": 2
    },
    "name": "Foo",
    "kind": 5,
    "containerName": "com.example"
  },
  {
    "location": {
      "uri": "file://<WORKSPACE_ROOT>/src/com/example/Foo.java"
    },
    "data": {
      "file_id": 0,
      "item": 1
    },
    "name": "bar",
    "kind": 6,
    "containerName": "com.example.Foo"
  },
  {
    "location": {
      "uri": "file://<WORKSPACE_ROOT>/src/com/example/Foo.java"
    },
    "data": {
      "file_id": 0,
      "item": 0
    },
    "name": "x",
    "kind": 8,
    "containerName": "com.example.Foo"
  }
]
